Fix minor CSS aligning of quote

--- a/style.css
+++ b/style.css
@@ -140,8 +140,10 @@ figure {
 }
 
 blockquote {
+    flex: 1;
     font-size: 36px;
     font-style: italic;
+    text-align: center;
 }
 
 figcaption {
